@@ -55,7 +55,7 @@ from pithos.api.settings import (BACKEND_DB_MODULE, BACKEND_DB_CONNECTION,
                                  BACKEND_BLOCK_UMASK,
                                  BACKEND_QUEUE_MODULE, BACKEND_QUEUE_HOSTS,
                                  BACKEND_QUEUE_EXCHANGE,
-                                 QUOTAHOLDER_POOLSIZE,
+                                 ASTAKOSCLIENT_POOLSIZE,
                                  SERVICE_TOKEN,
                                  ASTAKOS_URL,
                                  BACKEND_ACCOUNT_QUOTA, BACKEND_CONTAINER_QUOTA,
@@ -953,10 +953,9 @@ _pithos_backend_pool = PithosBackendPool(
         queue_module=BACKEND_QUEUE_MODULE,
         queue_hosts=BACKEND_QUEUE_HOSTS,
         queue_exchange=BACKEND_QUEUE_EXCHANGE,
-        quotaholder_enabled=True,
-        quotaholder_url=ASTAKOS_URL,
-        quotaholder_token=SERVICE_TOKEN,
-        quotaholder_client_poolsize=QUOTAHOLDER_POOLSIZE,
+        astakos_url=ASTAKOS_URL,
+        service_token=SERVICE_TOKEN,
+        astakosclient_poolsize=ASTAKOSCLIENT_POOLSIZE,
         free_versioning=BACKEND_FREE_VERSIONING,
         block_params=BLOCK_PARAMS,
         public_url_security=PUBLIC_URL_SECURITY,
